components/mycomponent-2/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: application-sample
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: mycomponent-2
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elmycomponent-2
  namespace: karthik
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-mycomponent-2
    weight: null
status: {}
